menu button z-index fix

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -115,6 +115,7 @@ header {
 		position:absolute;
 		top:16px;
 		left:16px;
+		z-index:1;
 	}
 	.plus {
 		position:absolute;
